[gd_scene load_steps=3 format=3 uid="uid://bjy72gqtniff"]

[ext_resource type="Script" path="res://projectile.gd" id="1_y7b7b"]
[ext_resource type="PackedScene" uid="uid://c3kcy38o4gjq8" path="res://collisions/hit_box.tscn" id="2_nere3"]

[node name="projectile" type="Node2D"]
z_index = 15
script = ExtResource("1_y7b7b")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="HitBox" parent="." instance=ExtResource("2_nere3")]

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
